fix overflowing home page

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,13 @@
   font-family: 'Lato';
 }
 
+.portfolio{
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
+}
+
 *{
   scroll-behavior: smooth;
 }
@@ -122,8 +129,7 @@ nav{
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh; /* Make sure body takes full height */
-  width: 100vw;
-  margin: 0;
+  width: 100%;
 }
 
 .profile-img {
@@ -147,7 +153,7 @@ nav{
 }
 
 .profile-img img{
-  width: 30vw;
+  width: 25vw;
   border-radius: 10%;
 }
 
@@ -173,7 +179,6 @@ nav{
   border-radius: 10px;
   box-shadow: 0vw 0vw 1vw #157add;
   width: 57%;
-
 }
 
 .description-div>p span{
@@ -189,6 +194,7 @@ nav{
   padding: 0.6vw 0.7vw;
   border-radius: 10px;
   height: 60%;
+  font-size: 1.2rem;
 }
 
 .section-title{
@@ -412,13 +418,20 @@ nav{
 }
 
 #projects{
+  padding-top: 11vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2vw;
+}
+
+.projects-div{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
   gap: 3vw;
-  padding-top: 11vh;
 }
 
 #projects>h2{
@@ -511,7 +524,7 @@ nav{
   font-size: 1.3rem;
   font-weight: 900;
   border-radius: 20px;
-  width: 10vw;
+  min-width: 10vw;
   align-items: center;
   transition: 0.5s ease-in-out;
   outline: none;
@@ -519,7 +532,6 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  cursor: pointer;
   text-transform: uppercase;
   font-family: 'Audiowide';
   font-size: 1.2rem;
@@ -529,11 +541,11 @@ nav{
   color: white;
   background-size: 100% 100%;
   opacity: 1;
+  cursor: pointer;
 }
 
 .website-link{
   height: 1.5vw;
-  width: 8.5vw;
   font-size: 1.1rem;
   margin: 1vw;
 }
@@ -642,146 +654,6 @@ nav{
 }
 
 
-@media only screen and (max-width: 1200px) {
-  #contributions{
-    display: none;
-  }
-}
-
-
 @media only screen and (max-width: 600px) {
 
-
-  nav {
-    width: 90vw;
-    font-size: 0.7em;
-    position: sticky;
-    top: 40px;
-    margin-bottom: 50px;
-  }
-
-  .nav-link{
-    padding: 13px 5px;
-    width: 20vw;
-  }
-
-  .section-title{
-    font-size: 15px;
-    font-size: 0.85em;
-  }
-
-  #about-me{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  #about-me p{
-    font-size: 0.8em;
-    width: 85vw;
-  }
-
-  .section{
-    margin: 10px 0px;
-  }
-
-  .profile-img{
-    width: 85vw;
-  }
-
-  .profile-img h3 img{
-    width: 5vw;
-  }
-  .profile-img img{
-    width: 70vw;
-  }
-
-  .profile-img{
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .social-icon-div img{
-    width: 10vw;
-  }
-
-  .social-icon-div{
-    column-gap: 40px;
-  }
-
-  .tech-img{
-    width: 15vw;
-  }
-
-  .express-img{
-    width: 25vw;
-  }
-  
-  .java-img{
-    width: 12vw;
-  }
-
-  .flip-card{
-    min-height: 120px;
-    max-height: 120px;
-  }
-
-  .flip-card-back h4{
-    font-size: 0.7em;
-    width: 16vw;
-  }
-
-  .flip-card-back{
-    padding: 0px 10px;
-    width: 20vw
-  }
-
-  .cards{
-    row-gap: 10px;
-  }
-
-  .projects-div{
-    flex-direction: column;
-    row-gap: 10px;
-    margin-bottom: 20px;
-  }
-
-  .proj-img{
-    width: 80vw;
-  }
-
-  .website-link{
-    width: 25vw;
-  }
-
-  .github-img img{
-    width: 10vw;
-  }
-
-  .tech-proj{
-    width: 7vw;
-  }
-
-  .ex-proj{
-    width: 10vw;
-  }
-
-  #message-me img{
-    display: none;
-  }
-
-  .important-info input{
-    width: 30vw;
-  }
-
-  .form-div  input, .form-div textarea{
-    width: 70vw;
-  }
-
-  footer{
-    width: 70vw;
-  }
-
-  .phone-img{
-    width: 10vw;
-  }
 }
